--- a/html/templates/tappingsimulator_views/tappingsimulator_index.html
+++ b/html/templates/tappingsimulator_views/tappingsimulator_index.html
@@ -2,4 +2,52 @@
 
 {% block main_container %}
 
+<div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div class="row">
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                <!--canvas>
+                    
+                </canvas-->
+                {# {% include 'tappingsimulator_views/linegraph.html' %} #}
+                {{ div }}
+                {{ script }}
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+
+                <form action="" method="POST" class="form">
+                    <legend>Adjust Parameters</legend>
+                
+                        
+                    <div class="form-group form-group-sm">
+                        <label for="ioi_number_input" class="control-label">IOI:</label>
+                        <input class="form-control" id="ioi_number_input" type="number" min="0" max="10" step="1" value="5">
+                    </div>
+                    <div class="form-group form-group-sm">
+                        <label for="td_number_input" class="control-label">TD:</label>
+                        <input class="form-control" id="td_number_input" type="number" min="0" max="10" step="1" value="5">
+                    </div>
+                    <div class="form-group form-group-sm">
+                        <label for="tf_number_input" class="control-label">TF:</label>
+                        <input class="form-control" id="tf_number_input" type="number" min="0" max="10" step="1" value="5">
+                    </div>
+                    <div class="form-group form-group-sm">
+                        <label for="noise_number_input" class="control-label">Noise:</label>
+                        <input class="form-control" id="noise_number_input" type="number" min="0" max="10" step="1" value="5">
+                    </div>
+
+                    <button type="submit" class="btn btn-primary btn-block">Generate</button>
+
+
+                </form>
+
+                <!--input class="form-control" type="number" min="0" max="10" step="1" value="5" size="5" name="">
+
+                <a href="" class="btn btn-primary btn-block" data-toggle="tooltip" data-placement="bottom" title="this is a test">Generate</a-->
+            </div>
+
+        </div>
+    </div>
+</div>
+
 {% endblock %}
